fix: Fix image too small

--- a/css/home/projects.css
+++ b/css/home/projects.css
@@ -51,7 +51,7 @@
 }
 
 .projects-section .projects-grid .project-card .project-image img {
-    width: 75%;
+    width: 95%;
 }
 
 .projects-section .projects-grid .project-card .project-tech-used {
